--- a/_posts/2016-03-25-images.markdown
+++ b/_posts/2016-03-25-images.markdown
@@ -1,12 +1,14 @@
 ---
 layout: post
-title:  "Et si on mettait un peu de couleur dans tout ça"
+title:  "Des images pour egayer tout ça"
 date:   2016-03-25 21:41:54
 categories: jekyll
 ---
 
 Le thème par défaut de Jekyll est minimaliste. Pour l'instant, il affiche les billets dans l'ordre chronologique.
 
-Pour egayer un peut ça avec markdown, on peut mettre des images
+Pour mettre un peu de couleur il faut mettre des images.
 
 ![oiseau](/img/oiseau.jpg)
+
+Les images vont être regroupées ensembles dans un dossier à la racine du site et les pages y font appel: `![oiseau](/img/oiseau.jpg)`
