Modifie brouillon d'article

--- a/_posts/2016-04-24-debut.md
+++ b/_posts/2016-04-24-debut.md
@@ -4,22 +4,22 @@ title: "Début du journal de bord"
 date: 2016-04-23
 ---
 
-Le but de ce journal est de prendre des notes de mon avancement. 
+        Le but de ce journal est de prendre des notes de mon avancement. 
 Ces notes sont publiés afin de me motiver et de peut-être partager mon expérience.
 
-Je vais raconter brièvement la situation actuelle et bientôt passer aux plans futurs.
+Je vais raconter brièvement la situation actuelle et passer aux plans futurs.
 
 Apprentissage :
 
 * git
 * vim
 
-Maitrisé : terme trop large à définir
+Maitrisé : à venir.  
 
 En faisant le choix d'utiliser git/GitHub pour publier mon site web,
 je faisais un choix osé, n'étant pas programmeur.
 
-En effet, la documentation de git est écrite par et pour des programmeurs.
+Oui, la documentation de git est écrite par et pour des programmeurs.
 Ou bien, la façon d'utiliser les branches, par exemple, est bien expliqué,
 mais la façon dont utiliser ces branches est laissée
 sous-entendue. Comme si tout le monde savait, naturellement.  
