--- a/_posts/2016-05-28-probleme.markdown
+++ b/_posts/2016-05-28-probleme.markdown
@@ -11,3 +11,9 @@ car j'ai besoin de savoir quand le fichier bepo.markdown a été changé la
 dernière fois dans le répertoire git. La date de l'OS indique le 8 mai
 2016 à 15:24.
 
+`git log -- bepo.markdown`
+
+Le 9 mai 2016 à 13:42:44
+
+Donc ici je vais changer la date par le 8 mai. Mais je me demande si
+j'aurais pu me tromper.
