Modifie titres des posts et pages

--- a/_posts/2016-04-24-debut.md
+++ b/_posts/2016-04-24-debut.md
@@ -1,10 +1,12 @@
 ---
 layout: post
-title: "Début du journal de bord"
+title:  "Vim : un nouveau départ" 
 date: 2016-04-23
 ---
+"Début du journal de bord"
 
-        Le but de ce journal est de prendre des notes de mon avancement. 
+Le but de ce journal est de prendre des notes de mon avancement. 
+
 Ces notes sont publiés afin de me motiver et de peut-être partager mon expérience.
 
 Je vais raconter brièvement la situation actuelle et passer aux plans futurs.
