--- a/_posts/2016-03-25-images.markdown
+++ b/_posts/2016-03-25-images.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Des images pour egayer tout ça"
+title:  Les images en markdown
 date:   2016-03-25 21:41:54
 categories: jekyll
 ---
