--- a/_posts/2016-06-15-bepo.markdown
+++ b/_posts/2016-06-15-bepo.markdown
@@ -1,4 +1,6 @@
 ---
+lang: fr
+ref: bepo2
 title: bépo
 date: 2016-06-15 22:13
 layout: post
@@ -33,7 +35,7 @@ confortable, mais difficile d'accès (encore une fois…) parfois. Dans ce
 sac là, je pourrais mettre (en partant de 0) bépo, vim, tmux, latex,
 git, jekyll.
 
-<!--- wtf 
+<!--- wtf
 
 La ligne de commande me monte à la tête. Un peu comme une grosse
 machine : à quoi elle sert ? et bien il y a ce qu'on voit qu'elle fait,
