--- a/_posts/2016-04-24-debut.md
+++ b/_posts/2016-04-24-debut.md
@@ -1,11 +1,13 @@
 ---
+lang: fr
+ref: journal
 layout: post
-title:  "Vim : un nouveau départ" 
+title:  "Vim : un nouveau départ"
 date: 2016-04-23
 ---
 "Début du journal de bord"
 
-Le but de ce journal est de prendre des notes de mon avancement. 
+Le but de ce journal est de prendre des notes de mon avancement.
 
 Ces notes sont publiés afin de me motiver et de peut-être partager mon expérience.
 
@@ -29,7 +31,7 @@ sous-entendue. Comme si tout le monde savait, naturellement.
 Donc je fais un choix osé, car bien que je n'ai lu que des
 encouragements, je ne sais pas si c'est absolument nécessaire.
 Après tout, une bonne hiérarchie de fichiers fait aussi bien le
-travail, non ? 
+travail, non ?
 
 Au moment d'écrire ce billet, je suis à ma première journée
 d'étude de vim. Je dois me donner beaucoup de choses à écrire et
@@ -40,4 +42,4 @@ Après avoir écrit le premier jet, je vais enregistrer mon travail
 dans git comme premier jet, je vais le corriger et ré-enregistrer.
 Ensuite on verra pour définir un bon workflow.
 
-Bon le concept est un peu étrange, mais on va voir. 
+Bon le concept est un peu étrange, mais on va voir.
