--- a/_posts/2016-04-24-vim.md
+++ b/_posts/2016-04-24-vim.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Vim : un nouveau départ" 
+title:  "Vim : un investissement" 
 date: 2016-04-23
 ---
 "Début du journal de bord"
