--- a/_posts/2016-06-03-nvALT.markdown
+++ b/_posts/2016-06-03-nvALT.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: nvALT
+title: "nvALT : un bon début"
 date: 2016-06-03 21:51:49 America/Montreal
 ---
 J'ai essayé nvALT aujourd'hui, après avoir regardé la vidéo incroyable
