--- a/_posts/2016-03-23-git.markdown
+++ b/_posts/2016-03-23-git.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  Déployer avec git  
+title:  "Git : déploiement rapide"
 date:   2016-03-23 20:37:14
 categories: jekyll
 ---
@@ -44,7 +44,7 @@ Par défaut, le serveur local se trouve en : [localhost:4000][lien-local]
 
 ---
 
-Ensuite, on peut [ajouter un nouveau billet]({% post_url 2016-03-19-ajouter-billet %})
+Ensuite, on peut [ajouter un nouveau billet]({% post_url 2016-03-19-jekyll %})
 
 [github]: https://github.com/sgdjs/sgdjs.github.io.git
 [lien-local]: http://localhost:4000
