Update post claviers-o2

--- a/_posts/2016-07-03-claviers-o2.markdown
+++ b/_posts/2016-07-03-claviers-o2.markdown
@@ -7,7 +7,7 @@ time: 2016-07-03 14:51:19
 La douleur au poignet est subtile, et tous ne la ressentent pas.
 L'utilisation intensive du clavier, c'est à dire une journée normale de
 travail bureau pour de nombreuses personnes, provoque des douleurs sur
-le haut des mains.
+le haut des mains (rappelez-moi de donner plus de détails et références).
 
 La disposition orthogonale d'un clavier permet de réduire les problèmes
 de canal carpien. En effet la distance à parcourir pour les doigts est
